--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "osrs-json-hiscores",
-  "version": "1.0.6",
-  "description": "",
+  "version": "1.0.7",
+  "description": "The Oldschool Runescape API wrapper that does more!",
   "main": "hiscores.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
