--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "osrs-json-hiscores",
-  "version": "1.1.0",
+  "version": "1.1.3",
   "description": "The Oldschool Runescape API wrapper that does more!",
   "main": "hiscores.js",
   "scripts": {
@@ -27,7 +27,8 @@
   },
   "homepage": "https://github.com/maxswa/osrs-json-hiscores#readme",
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3"
   },
   "devDependencies": {
     "jest": "^24.8.0"
