--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "cheerio": "^1.0.0-rc.3"
   },
   "devDependencies": {
-    "jest": "^24.8.0"
+    "jest": "^24.8.0",
+    "tslint": "^5.17.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.5.2"
   }
 }
