--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "osrs-json-hiscores",
   "version": "1.1.3",
   "description": "The Oldschool Runescape API wrapper that does more!",
-  "main": "hiscores.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
+    "dev": "watch 'yarn run build' src",
+    "build": "tsc",
     "test": "jest"
   },
   "repository": {
@@ -33,7 +39,9 @@
   "devDependencies": {
     "jest": "^24.8.0",
     "tslint": "^5.17.0",
+    "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "watch": "^1.0.2"
   }
 }
