--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "watch 'yarn run build' src",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest --config jestconfig.json"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,7 @@
     "stats",
     "skills"
   ],
-  "author": "",
+  "author": "maxswa",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/maxswa/osrs-json-hiscores/issues"
@@ -37,7 +37,10 @@
     "cheerio": "^1.0.0-rc.3"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.11",
+    "@types/jest": "^24.0.14",
     "jest": "^24.8.0",
+    "ts-jest": "^24.0.2",
     "tslint": "^5.17.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
