--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "dev": "watch 'yarn run build' src",
     "build": "tsc",
-    "test": "jest --config jestconfig.json"
+    "test": "jest --config jestconfig.json",
+    "prepublish": "yarn run build",
+    "release": "np"
   },
   "repository": {
     "type": "git",
@@ -40,6 +42,7 @@
     "@types/cheerio": "^0.22.11",
     "@types/jest": "^24.0.14",
     "jest": "^24.8.0",
+    "np": "^5.0.3",
     "ts-jest": "^24.0.2",
     "tslint": "^5.17.0",
     "tslint-config-airbnb": "^5.11.1",
