--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
   "homepage": "https://github.com/maxswa/osrs-json-hiscores#readme",
   "dependencies": {
     "axios": "^0.19.0",
-    "cheerio": "^1.0.0-rc.3"
+    "jsdom": "^16.3.0"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.11",
     "@types/jest": "^24.0.14",
+    "@types/jsdom": "^16.2.3",
     "jest": "^24.8.0",
     "np": "^5.0.3",
     "prettier": "^1.19.1",
