--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "homepage": "https://github.com/maxswa/osrs-json-hiscores#readme",
   "dependencies": {
     "axios": "^0.21.1",
-    "jsdom": "^16.3.0"
+    "jsdom": "^16.3.0",
+    "useragent-generator": "^1.1.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.14",
