--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "osrs-json-hiscores",
   "version": "2.4.0",
-  "description": "The Oldschool Runescape API wrapper that does more!",
+  "description": "The Old School Runescape API wrapper that does more!",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -11,6 +11,7 @@
     "dev": "watch 'yarn run build' src",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint --fix \"src/**/*.ts\"",
     "test": "jest --config jestconfig.json",
     "prepublish": "yarn run build",
     "release": "np"
@@ -35,22 +36,66 @@
     "url": "https://github.com/maxswa/osrs-json-hiscores/issues"
   },
   "homepage": "https://github.com/maxswa/osrs-json-hiscores#readme",
+  "eslintConfig": {
+    "root": true,
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "extends": [
+      "eslint-config-airbnb-typescript",
+      "prettier"
+    ],
+    "ignorePatterns": [
+      "**/@types/*"
+    ]
+  },
+  "prettier": {
+    "trailingComma": "none",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(t|j)sx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "testEnvironment": "node"
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "jsdom": "^16.3.0",
     "useragent-generator": "^1.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^26.0.21",
     "@types/jsdom": "^16.2.3",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "np": "6.5.0",
-    "prettier": "^1.19.1",
-    "ts-jest": "^26.4.4",
-    "tslint": "^5.17.0",
-    "tslint-config-airbnb": "^5.11.1",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.2",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.5.4",
+    "typescript": "^4.2.3",
     "watch": "^1.0.2"
   }
 }
