--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,12 @@ jobs:
           cmd: install
       - uses: borales/actions-yarn@v2.0.0
         with:
+          cmd: lint
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: format
+      - uses: borales/actions-yarn@v2.0.0
+        with:
           cmd: build
       - uses: borales/actions-yarn@v2.0.0
         with:
