--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "root": true,
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-      "project": "./tsconfig.json"
+      "project": "./tsconfig.eslint.json"
     },
     "plugins": [
       "@typescript-eslint"
