--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lib/**/*"
   ],
   "scripts": {
-    "dev": "watch 'yarn run build' src",
+    "dev": "yarn build --watch",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint --fix \"src/**/*.ts\"",
@@ -109,7 +109,6 @@
     "np": "6.5.0",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3",
-    "watch": "^1.0.2"
+    "typescript": "^4.2.3"
   }
 }
