--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
       "@typescript-eslint"
     ],
     "extends": [
-      "eslint-config-airbnb-typescript",
+      "airbnb-base",
+      "airbnb-typescript/base",
       "prettier"
     ],
     "ignorePatterns": [
@@ -72,7 +73,8 @@
     "trailingComma": "none",
     "tabWidth": 2,
     "semi": true,
-    "singleQuote": true
+    "singleQuote": true,
+    "endOfLine": "auto"
   },
   "jest": {
     "transform": {
@@ -97,20 +99,17 @@
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "@types/jsdom": "^21.1.1",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "eslint": "^7.22.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.44.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "husky": "^5.2.0",
     "jest": "^29.6.1",
-    "lint-staged": "^10.5.4",
+    "lint-staged": "^13.2.3",
     "np": "^7.7.0",
-    "prettier": "^2.2.1",
+    "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   }
