Disabled eslint rule.

--- a/package.json
+++ b/package.json
@@ -67,7 +67,10 @@
     ],
     "ignorePatterns": [
       "**/@types/*"
-    ]
+    ],
+    "rules": {
+      "max-classes-per-file": "off"
+    }
   },
   "prettier": {
     "trailingComma": "none",
