--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,7 @@
     "outDir": "./lib",
     "strict": true,
     "lib": ["ES2015", "DOM", "DOM.Iterable"],
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/@types"
-    ]
+    "typeRoots": ["./node_modules/@types", "./src/@types"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
